ghc-4335c07/testsuite/tests/safeHaskell/ghci/p13.stderr

<interactive>:10:1: error:
    Unsafe overlapping instances for Pos [Int]
      arising from a use of ‘res’
    The matching instance is:
      instance [overlapping] [safe] Pos [Int]
        -- Defined at <interactive>:8:30
    It is compiled in a Safe module and as such can only
    overlap instances from the same module, however it
    overlaps the following instances from different modules:
      instance [safe] Pos [a] -- Defined at P13_A.hs:6:10
    In the expression: res [1 :: Int, 2 :: Int]
    In an equation for ‘it’: it = res [1 :: Int, 2 :: Int]
